ingress-apple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
        - path: /apple
          pathType: Exact
          backend:
            service: 
              name: apple-service
              port: 
                number: 5678
